--- a/views/index.erb
+++ b/views/index.erb
@@ -1,9 +1,9 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title></title>
-  </head> -->
+  </head>
   <body>
     <h1>
       Buster's Best Bowling Alley
@@ -13,4 +13,4 @@
     </h2>
     <p>97 Bowling Alley Lane, Boulder CO </p>
   </body>
-<!-- </html> -->
+</html>
